# floordetection

./: CMakeLists.txt  README.md  package.xml
action/: FollowPath.action
launch/: configurator.launch  detector.launch  follower.launch
src/: configurator.cpp  follower.cpp
src/lib/: classifier.cpp  classifier.h  common.h  configurator.cpp  configurator.h  detector.cpp  detector.h  disjoint_set.cpp  disjoint_set.h  horizon_finder.cpp  horizon_finder.h  path_follower.cpp  path_follower.h  robot.cpp  robot.h  segmenter.cpp  segmenter.h
